Added opens for javax.swing.plaf.basic for linuxAppImage