@@ -410,6 +410,7 @@ task linuxAppImage(dependsOn: 'createBundlesDir', type: Exec) {
                 '--main-class', 'com.mucommander.main.muCommander', \
                 '--java-options', '--add-opens java.base/java.io=ALL-UNNAMED \
                                    --add-opens java.base/java.net=ALL-UNNAMED \
+                                   --add-opens java.desktop/javax.swing.plaf.basic=ALL-UNNAMED \
                                    --add-opens java.transaction.xa/javax.transaction.xa=ALL-UNNAMED \
                                    --add-opens java.management/javax.management=ALL-UNNAMED \
                                    --add-opens java.rmi/java.rmi=ALL-UNNAMED \
